--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
     "animate.css-react": "^1.1.0",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.1.3",
     "react": "^17.0.2",
